<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|bottom"
    android:orientation="vertical"
    tools:context=".login.FragmentFloatingPassword" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginBottom="25dp"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/digit0"
                style="@style/InputDigitLayout" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/digit1"
                style="@style/InputDigitLayout"
                android:layout_marginStart="@dimen/margin_floating_layout"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/digit2"
                style="@style/InputDigitLayout"
                android:layout_marginStart="@dimen/margin_floating_layout"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/digit3"
                style="@style/InputDigitLayout"
                android:layout_marginStart="@dimen/margin_floating_layout"/>

        </LinearLayout>

        <TableLayout
            android:id="@+id/numeric_pad_table"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="75dp"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="65dp"
            android:layout_marginBottom="120dp"
            android:layout_weight="7"
            android:orientation="horizontal">

            <TableRow
                style="@style/TableRowNumPad">

                <TextView
                    android:id="@+id/numpad_1"
                    android:text="@string/numpad_1"
                    style="@style/NumpadButton"
                    android:layout_marginStart="0dp">
                </TextView>

                <TextView
                    android:id="@+id/numpad_2"
                    android:text="@string/numpad_2"
                    style="@style/NumpadButton">

                </TextView>

                <TextView
                    android:id="@+id/numpad_3"
                    android:text="@string/numpad_3"
                    style="@style/NumpadButton">

                </TextView>

            </TableRow>

            <TableRow
                style="@style/TableRowNumPad">

                <TextView
                    android:id="@+id/numpad_4"
                    android:text="@string/numpad_4"
                    style="@style/NumpadButton"
                    android:layout_marginStart="0dp">
                </TextView>

                <TextView
                    android:id="@+id/numpad_5"
                    android:text="@string/numpad_5"
                    style="@style/NumpadButton">
                </TextView>

                <TextView
                    android:id="@+id/numpad_6"
                    android:text="@string/numpad_6"
                    style="@style/NumpadButton">
                </TextView>

            </TableRow>

            <TableRow
                style="@style/TableRowNumPad">

                <TextView
                    android:id="@+id/numpad_7"
                    android:text="@string/numpad_7"
                    style="@style/NumpadButton"
                    android:layout_marginStart="0dp">
                </TextView>

                <TextView
                    android:id="@+id/numpad_8"
                    android:text="@string/numpad_8"
                    style="@style/NumpadButton">
                </TextView>

                <TextView
                    android:id="@+id/numpad_9"
                    android:text="@string/numpad_9"
                    style="@style/NumpadButton">
                </TextView>

            </TableRow>

            <TableRow
                style="@style/TableRowNumPad">

                <ImageView
                    android:id="@+id/numpad_exit"
                    android:src="@drawable/ic_baseline_exit_to_app"
                    style="@style/NumpadButton"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="0dp"
                    android:padding="15dp"
                    app:tint="@color/black"
                    android:contentDescription="@string/icon_exit_pincode">

                </ImageView>

                <TextView
                    android:id="@+id/numpad_0"
                    android:text="@string/numpad_0"
                    style="@style/NumpadButton"
                    android:layout_marginBottom="0dp">
                </TextView>

                <ImageView
                    android:id="@+id/numpad_clear"
                    android:src="@drawable/ic_baseline_clear_all"
                    style="@style/NumpadButton"
                    android:padding="15dp"
                    android:layout_marginBottom="0dp"
                    app:tint="@color/black"
                    android:contentDescription="@string/icon_clear_pincode">

                </ImageView>

            </TableRow>

        </TableLayout>

</LinearLayout>