<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/layout_floating_pass_edit">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/radius_cardview"
        android:outlineAmbientShadowColor="android:@color/design_default_color_background"
        app:cardUseCompatPadding="true"
        app:cardElevation="@dimen/elevation_cardview"
        tools:context=".login.FragmentFloatingEdit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/color_on_primary">

            <!-- NOMBRE DE LA CONTRASEÑA -->
            <LinearLayout
                style="@style/LayoutFieldPasswordLinearLayout">

                <Spinner
                    android:id="@+id/edit_spinner_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/edit_name"
                    style="@style/LayoutFieldPasswordText"
                    android:inputType="text"
                    android:hint="@string/text_item_name"
                    android:autofillHints="@string/text_item_name"/>

            </LinearLayout>

            <!-- USER DE LA CONTRASEÑA -->
            <LinearLayout
                style="@style/LayoutFieldPasswordLinearLayout">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_account"
                    android:contentDescription="@string/icon_user_account" />

                <EditText
                    android:id="@+id/edit_user"
                    style="@style/LayoutFieldPasswordText"
                    android:hint="@string/text_item_user"
                    android:autofillHints="@string/text_item_user"/>

            </LinearLayout>

            <!-- PASS DE LA CONTRASEÑA -->
            <LinearLayout
                style="@style/LayoutFieldPasswordLinearLayout">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_pass_key"
                    android:contentDescription="@string/icon_password_key" />

                <EditText
                    android:id="@+id/edit_pass"
                    style="@style/LayoutFieldPasswordText"
                    android:hint="@string/text_item_password"
                    android:autofillHints="@string/text_item_password"/>

            </LinearLayout>

            <!-- CATEGORY DE LA CONTRASEÑA -->
            <LinearLayout
                style="@style/LayoutFieldPasswordLinearLayout">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_category"
                    android:contentDescription="@string/icon_password_key"/>

                <Spinner
                    android:id="@+id/edit_spinner_categ"
                    style="@style/LayoutFieldPasswordText" />

            </LinearLayout>

            <!-- URL DE LA CONTRASEÑA -->
            <LinearLayout
                style="@style/LayoutFieldPasswordLinearLayout">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_url"
                    android:contentDescription="@string/icon_password_key"/>

                <EditText
                    android:id="@+id/edit_url"
                    style="@style/LayoutFieldPasswordText"
                    android:inputType="textUri"
                    android:hint="@string/text_item_url"
                    android:autofillHints="@string/text_item_url" />

            </LinearLayout>

            <!-- Botones de aceptar o cancelar -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_floating_layout"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/fab_none_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_none"
                        android:layout_alignParentStart="true"
                        android:contentDescription="@string/icon_exit_edit" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/floating_done_pass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_done"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/icon_edit_password" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>